--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Chandler Creech : I make fun stuff.">
+    <meta name="description" content="Chandler Creech : Computer Engineer and Hardware Designer.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -14,15 +14,6 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chanman">View on GitHub</a>
-
-          <h1 id="project_title">Chandler Creech</h1>
-          <h2 id="project_tagline">I make fun stuff.</h2>
-
-        </header>
-    </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
@@ -30,10 +21,11 @@
         <h2>
 <a name="welcome-to-my-site" class="anchor" href="#welcome-to-my-site"><span class="octicon octicon-link"></span></a>Welcome to my site</h2>
 
-<p>I'm a computer Engineering major at the University of Michigan.</p>
+<p>I'm a Computer Engineering major at the University of Michigan.</p>
 
 <p>I build cool stuff with both hardware and software, and am experienced with C/C++, assembly, Android dev, and embedded microcontrollers.</p>
 
+<p> Courses I have taken include: Data Structures and Algorithms, Computer Organization, Electronic Circuits, and Discrete Mathematics.</p>
 <h2>
 <a name="noteable-projects" class="anchor" href="#noteable-projects"><span class="octicon octicon-link"></span></a>Noteable Projects:</h2>
 
@@ -50,7 +42,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Contact me at creechch@umich.edu</p>
       </footer>
     </div>
 
