--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <body>
 
     <!-- HEADER -->
-
+    <div id="header_wrap" class="outer">
+      <header class="inner">
+        <p>Chandler Creech</p>
+      </header>
+    </div>
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
