--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   </head>
 
   <body>
-
+  
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
       <header class="inner">
-        <p>Chandler Creech</p>
+-          <h1 id="project_title">Chandler Creech</h1>
+-          <h2 id="project_tagline">I build awesome things.</h2>
       </header>
     </div>
     <!-- MAIN CONTENT -->
@@ -27,7 +28,7 @@
 
 <p>I'm a Computer Engineering major at the University of Michigan.</p>
 
-<p>I build cool stuff with both hardware and software, and am experienced with C/C++, assembly, Android dev, and embedded microcontrollers.</p>
+<p>I do both hardware and software design with high proficiency, and am experienced with C/C++, assembly, Android dev, and embedded microcontrollers.</p>
 
 <p> Courses I have taken include: Data Structures and Algorithms, Computer Organization, Electronic Circuits, and Discrete Mathematics.</p>
 <h2>
